--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -19,3 +19,4 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="/assets/images/logo_unitalk_mini.png" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
