--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -59,5 +59,17 @@
               <i class="fa fa-database menu-icon"></i>
           </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/approval">
+            <span class="menu-title">Approval</span>
+            <i class="fa fa-check-circle menu-icon"></i>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+            <span class="menu-title">Chat Setting</span>
+            <i class="fa fa-gear menu-icon"></i>
+        </a>
+    </li>
   <% } %>
 </ul>
