--- a/views/login.ejs
+++ b/views/login.ejs
@@ -115,5 +115,18 @@
       </div>
     </div>
     <script src="main.js"></script>
+    <!-- Tombol Chat -->
+    <button id="chatButton">
+      <i class="fa-solid fa-comments"></i>
+    </button>
+
+    <!-- Container Iframe Chat -->
+    <div id="uniTalkContainer">
+      <iframe 
+          id="uniTalkChat"
+          src="http://localhost:5000/api/chats/embed?api_key=9807df75-24c7-4d77-999c-3e654b85aaea">
+      </iframe>
+    </div>
+    
   </body>
 </html>
