--- a/views/test.ejs
+++ b/views/test.ejs
@@ -13,8 +13,8 @@
             position: fixed;
             bottom: 90px;
             right: 20px;
-            width: 350px;
-            height: 500px;
+            width: 450px;
+            height: 550px;
             border: none;
             border-radius: 10px;
             z-index: 9999;
@@ -52,7 +52,7 @@
     <button id="chatButton"><i class="fa-solid fa-comments"></i></button>
     <iframe 
         id="uniTalkChat"
-        src="http://localhost:5000/api/chats/embed?api_key=9807df75-24c7-4d77-999c-3e654b85aaea">
+        src="http://localhost:5000/api/chats/embed?api_key=9807df75-24c7-4d77-999c-3e654b85aaea&id_sender=1">
     </iframe>
 
     <script>
